Fix button spacing

--- a/src/pages/Spaces/Auditory/auditory.module.css
+++ b/src/pages/Spaces/Auditory/auditory.module.css
@@ -51,7 +51,7 @@
   text-align: justify;
   line-height: 20px;
   color: #fff;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .buttonContainer {
